<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyBrowser</string>
    <string name="action_settings">设置</string>
    <string name="search_or_url">搜索或输入网址</string>
    <string name="title_activity_browser">BrowserActivity</string>
    <string name="search">搜索</string>
    <!-- 菜单按钮弹出窗口 -->
    <string name="menu_bookmark">书签</string>
    <string name="menu_add_bookmark">添加书签</string>
    <string name="menu_history">历史纪录</string>
    <string name="menu_download">下载</string>
    <string name="menu_power_off">退出</string>
    <string name="menu_email">发送邮件</string>
    <!-- 下载界面 -->
    <string name="title_activity_show_download">ShowDownloadActivity</string>
    <string name="title_download">下载</string>
    <string name="status_waiting">等待下载</string>
     <!-- 添加书签界面 -->
    <string name="title_activity_show_book_mark">ShowBookMarkActivity</string>
    <string name="title_bookmark">书签</string>
    <string name="item_bookmark_title">标题</string>
    <string name="item_bookmark_url">网址</string>
    <string name="item_bookmark_add">添加</string>
    <string name="item_bookmark_cancel">取消</string>
    <!-- 历史记录界面 -->
    <string name="title_activity_show_history">ShowHistoryActivity</string>
    <string name="title_history">历史记录</string>
	<!-- 发送邮件界面 -->
    <string name="title_activity_send_email">SendEmailActivity</string>
	<string name="title_send_email">发送邮件</string>
	<string name="item_addressor">发件：</string>
	<string name="hint_input_addressor">请输入发件人邮箱</string>
	<string name="item_password">密码：</string>
	<string name="hint_input_password">请输入邮箱密码</string>
	<string name="item_recipient">收件：</string>
	<string name="hint_input_recipient">请输入收件人邮箱</string>
	<string name="item_email_theme">主题：</string>
	<string name="hint_input_theme">请输入邮件主题</string>
	<string name="hint_input_content">请输入邮件内容</string>
	<string name="item_email_send">发送</string>
	<string name="item_email_cancel">取消</string>
	
</resources>
